YYYY.MM.DD

2008.07.05
  - Fixed the bug, which didn't allow any calls to Sphere functions
    from within a default map exit script if Exit() was called.

2008.07.03
  - Fixed the *_gl video drivers to transform images correctly
    up to the given coordinates.
  - It is now possible to change the base, as well as index
    and delay of frames in spritesets from within scripts.

2008.07.01
  - Changed text controls in the editor to use Courier as the font
    and changed the font size from 8 to 10.

2008.06.29
  - Fixed Linux network code: sockets correctly detect connections,
    sockets with disconnected peers mark themselves as not connected.

2008.06.26
  - Added Rhuan's network code to the Mac and Linux subsystems.
  - sound.getPosition() will no longer lock up the engine if
    the sound is not seekable.

2008.06.25
  - Extended the player input configuration by adding
    new configurable keys: Menu, A, B, X and Y.
  - Player input configuration is now available for script
    via GetPlayerKey(player, key)
  - Fixed a bug in the color interpolation of gradient lines,
    which caused flipped gradients on vertical and horizontal lines.
  - Removed backface culling from sphere_gl, because it didn't
    allow anymore for flipped images.
    
2008.06.23
  - Added missing documentation for CreateSpriteset().

2008.06.22
  - Engine no longer crashes when a layer renderer is
    set within a "on leave map" script.

2008.06.18
  - Fixed sound.pause() to pause MIDIs instead of stopping them.
  - Made the 'repeat' parameter in sound.play(repeat) to be optional.
    This allows for resuming the playback of a paused sound from it's 
    current position if sound.play() is called without any parameters.
    If 'repeat' is defined, the sound is set to the beginning and then played.
  - Added: sound.reset(), sound.getRepeat() and sound.setRepeat(repeat)
  - Added the new object SoundEffect with the following methods: